# conan-yara

./: CMakeLists.txt  README.md  conandata.yml  conanfile.py
test_package/: conanfile.py  test_package.cpp
